# sph-toy-star

./: ..gitignore.un~  .CMakeLists.txt.un~  .gitignore  .main1.cpp.un~  CMakeLists.txt  README.md  SPH.py  toy_star_1.cpp
Anastasia/: Visualisation.cpp  star.cpp
Glafira/: main.cpp  main1.cpp
Kostya/: .Active_Box.h.un~  .CMakeLists.txt.un~  .Menu.cpp.un~  .Textbox.cpp.un~  .Textbox.h.un~  .Utils.cpp.un~  .Utils.h.un~  Active_Box.cpp  Active_Box.h  CMakeLists.txt  Menu.cpp  Menu.h  Processing.cpp  Textbox.cpp  Textbox.h  Utils.cpp  Utils.h  Visualisation.cpp  glasha.cpp  kotyk.cpp  latex.md  main.cpp  sfml_test.cpp  test.txt
Mark/: sfml_test.cpp  sfml_test.cpp~  sfmltest
nekostya/: ..gitignore.un~  .CMakeLists.txt.un~  .Particle.cpp.un~  .Particle.h.un~  .Processing.cpp.un~  .Processing.h.un~  .README.md.un~  .Timer.cpp.un~  .Timer.h.un~  .Timer.tpp.un~  .Utils.h.un~  .Visualisation.cpp.un~  .Visualisation.h.un~  .glasha.cpp.un~  .kotyk.cpp.un~  .test.cpp.un~  CMakeLists.txt  CMakeLists.txt~  Particle.cpp  Particle.h  Processing.cpp  Processing.h  README.md  Timer.h  Timer.tpp  glasha.cpp  (+2 more)
project/: .CMakeLists.txt.un~  CMakeLists.txt  README.md  sfml_test.cpp
project/src/: .Processing.cpp.un~  .Processing.h.un~  .Visualisation.cpp.un~  .kotyk.cpp.un~  Menu.h  Processing.h  Processing.h~  Visualisation.cpp  Visualisation.h  kotyk.cpp  kotyk.cpp~
src/: .Timer.cpp.un~  .Utils.h.un~  CMakeLists.txt  Menu.cpp  Particle.cpp  Particle.h  Processing.cpp  Processing.h  Timer.cpp  Timer.cpp~  Timer.h  Timer.h~  Utils.h  Visualisation.cpp  Visualisation.h  main.cpp
(+4 files in other folders)
